# applepy

./: .env.example  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  alembic.ini  claude.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yaml
docs/: api.md  index.md
migrations/: env.py
migrations/versions/: 0b5b2edff285_create_employees_table.py  20251119_2131-2f34c730a42d_create_employees_table.py  20251120_0212-8778cce349c7_add_customers_table.py  20251120_0216-a17698ca7aa3_make_employee_office_code_and_reports_.py  20251120_0231-4177a5ef2d93_add_sales_rep_foreign_key_to_customers.py  20251121_0000-add_extension_to_employees.py  20251121_0001-create_product_lines_table.py  20251121_0002-create_products_table.py  20251121_0003-create_orders_table.py  20251121_0004-create_order_details_table.py  20251121_0005-create_payments_table.py  839d854ed7e9_create_offices_table.py
src/applepy/: appleflask.py  cli.py  db.py  env.py  exceptions.py  factory.py  flask.py  responses.py  session.py
src/applepy/domains/customers/: models.py  repository.py  routes.py  schemas.py  service.py
src/applepy/domains/employees/: models.py  repository.py  routes.py  schemas.py  service.py
src/applepy/domains/offices/: models.py  repository.py  routes.py  schemas.py  service.py
src/applepy/domains/order_details/: models.py  repository.py  routes.py  schemas.py  service.py
src/applepy/domains/orders/: models.py  repository.py  routes.py  schemas.py  service.py
src/applepy/domains/payments/: models.py  repository.py  routes.py  schemas.py  service.py
src/applepy/domains/product_lines/: models.py  repository.py  routes.py  schemas.py  service.py
src/applepy/domains/products/: models.py  repository.py  routes.py  schemas.py  service.py
src/applepy/repositories/: __init__.py  base.py
src/applepy/routes/: __init__.py  base.py
src/applepy/services/: __init__.py  base.py
tests/: conftest.py  test_cli.py  test_customers_routes.py  test_employees_routes.py  test_env.py  test_flask.py  test_main.py  test_offices_routes.py  test_session.py
tests/domains/: test_offices_repository.py  test_offices_service.py
