[project]
name = "applepy"
version = "0.1.0"
description = "API for model cars shop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2,<4.0",
    "flask-sqlalchemy>=3.1.1,<4.0",
    "pydantic>=2.0,<3.0",
    "pymysql>=1.1.2,<2.0",
    "sqlalchemy>=2.0,<3.0",
]

[project.scripts]
applepy = "applepy.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# You can add rulesets as you like; this is a sane starting point:
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]
include = "src|tests"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "alembic>=1.16.5,<2.0",
    "mypy>=1.0,<2.0",
    "pre-commit>=3.0,<4.0",
    "pytest>=7.0,<8.0",
    "pytest-cov>=4.0,<5.0",
    "pytest-env>=1.1.0,<2.0",
    "python-dotenv>=1.0.0,<2.0",
    "ruff>=0.6.0,<1.0",
    "mkdocs>=1.5,<2.0",
    "mkdocs-material>=9.0,<10.0",
]
